This version can differentiate between tags/ID's/CSS and scrape the specified data requested

--- a/templates/results.html
+++ b/templates/results.html
@@ -11,7 +11,7 @@
     {% for segment in results %}
     <tr>
       <td>{{segment.text}}</td>
-      <td></td>
+      <td>{{results}}</td>
     </tr>
   {% endfor %}
 
