--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Floating labels example · Bootstrap</title>
+    <title>Crawler</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/floating-labels/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -22,7 +22,7 @@
 
 <div class="container">
     {% block body %}
-    //content will be here
+
     {% endblock %}
 </div>
 
