--- a/templates/results.html
+++ b/templates/results.html
@@ -5,7 +5,7 @@
 
 <h1 class="h3 mb-3 font-weight-normal">{{name}}</h1>
 <h2>{{url}}</h2>
-
+<h2>This app is running on server number: <u>{{serverId}}</u></h2>
 <table style="background:black;color:white;border-radius:20px;">
     <tr>
 
